tests/fixtures/positive/testing-quality/mock-final-class-without-mock-maker/settings.gradle.kts
rootProject.name = "mock-final-class-without-mock-maker-positive"

include(":app")
